# sngp-pytorch

./: .gitignore  LICENSE  MANIFEST.in  README.md  environment.yaml  pyproject.toml  setup.cfg  setup.py
config/: config.yaml
config/trainer/: cpu.yaml  fast.yaml  gpu.yaml
experiments/: cifar100.ipynb  imagenet.ipynb  images.py  images_finetune.py  mwp.ipynb  mwp.py  sample.ipynb  slurm_cifar.sh  slurm_imagenet.sh  slurm_images.sh  slurm_mwp.sh
experiments/config/: cifar100.yaml  imagenet.yaml  images.yaml  images_finetune.yaml  mwp.yaml
experiments/config/data/: cifar100.yaml  cifar100_custom.yaml  imagenet.yaml  imagenet_emb.yaml  moons.yaml
experiments/config/lr_scheduler/: cosine_annealing.yaml  multi_step.yaml  plateau.yaml  sequential.yaml  step.yaml
experiments/config/model/: large.yaml  resnet50.yaml  (+3 more)
image_uncertainty/cifar/: cifar_datasets.py  cifar_evaluate.py  cifar_training.py  settings.py  svkdl_training.py
image_uncertainty/datasets/: smooth_random.py
image_uncertainty/models/: __init__.py  duq.py  resnet.py  svdkl.py  wrn.py
image_uncertainty/uncertainty/: calibration.py  methods.py  metrics.py
sngp_pytorch/: __init__.py  random_feature.py  utils.py
sngp_pytorch/backbones/: __init__.py  resnet.py  resnet_new.py  wide_resnet.py
sngp_pytorch/datamodules/: __init__.py  cifar100.py  cifar100_custom.py  embeddings.py
sngp_pytorch/models/: __init__.py  lit_random_feature.py  random_feature.py  random_feature_zoo.py  spectral_norm.py
sngp_pytorch/utils/: __init__.py  utils.py
spectral_normalized_models/: ddu.py  ddu_old.py  resnet.py
(+6 files in other folders)
