[metadata]
name = sngp_pytorch
home_page = https://github.com/alartum/sngp-pytorch
author = Aleksandr Artemenkov
author_email = alartum@gmail.com
project_urls =
    Source Code = https://github.com/alartum/sngp-pytorch
summary = Spectral-normalized Neural Gaussian Process (SNGP) implementation in PyTorch.

license = Apache-2
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

python_requires = >=3.8

[files]
packages =
    sngp_pytorch
    image_uncertainty
    spectral_normalized_models

[flake8]
# Allow unused imports in __init__.py
per-file-ignores = __init__.py:F401
exclude =
    image_uncertainty/*
    spectral_normalized_models/*
